--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Add base NGINX configuration file
   copy:
     dest: /etc/nginx/nginx.conf
-    src: etc/nginx/nginx.conf
+    src: etc/nginx/nginx.conf #From files
     owner: root
     group: root
     mode: 0644
